# bandcamp_downloader

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml  kanban.yml
git-hooks/: pre-push
intl/: en.json
src/: error.rs  helper.rs  lib.rs  main.rs  settings.rs  ui.rs
src/core/: download_service.rs  mod.rs  playlist.rs  tag.rs
src/helper/: file_helper.rs
src/helper/test/: strings.rs
src/model/: album.rs  json.rs  mod.rs  track.rs  trackfile.rs
src/ui/: intl.rs
src/ui/iced/: app.rs  mod.rs  style.rs  subscription.rs
src/ui/iced/components/: buttons.rs  controls.rs  entry.rs  event_log.rs  file_format_input.rs  main_view.rs  mod.rs  settings_view.rs  styled_pick_list.rs  styled_text_input.rs  url_section.rs
src/ui/iced/components/settings_view/: cover_art.rs  downloads.rs  general.rs  naming.rs  playlist.rs
