[package]
name = "bandcamp_downloader"
version = "0.1.0"
authors = ["Arthur E. Jones <PartyLich@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
futures = "0.3.5"
regex = "1.3.9"
lazy_static = "1.4.0"
chrono = { version = "0.4.11", features = ["serde"] }

[dependencies.reqwest]
version = "0.10.6"
features = ["stream"]

[dependencies.tokio]
# futures executor
version = "0.2.21"
features = ["rt-core", "macros", "fs", "io-util"]
